# quick-poll

./: .gitignore  Dockerfile  db.sqlite  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docker-publish.yml
core/: settings.py  urls.py
locale/fr/LC_MESSAGES/: django.po
vote/: admin.py  forms.py  models.py  urls.py  views.py
vote/migrations/: 0001_initial.py  0002_delegate_last_mail_alter_option_question.py  0003_delegate_mail_failed.py  0004_alter_delegate_last_mail.py  0005_alter_delegate_options_question_secret.py
vote/static/: delegate_app.js  fetch_info.js  style.css
vote/templates/vote/: answer_table.html  base.html  delegate_view.html  import_form.html  past_votes.html  results.html  staff_view.html
